// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute info renders correctly 1`] = `
<div
  className="wcpay-dispute-info"
>
  <div
    className="wcpay-dispute-info-item"
    key="created"
  >
    <Loadable>
      <span
        className="wcpay-dispute-info-key"
      >
        Dispute date: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Nov 1, 2019
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="amount"
  >
    <Loadable>
      <span
        className="wcpay-dispute-info-key"
      >
        Disputed amount: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        $10.00 USD
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="dueBy"
  >
    <Loadable>
      <span
        className="wcpay-dispute-info-key"
      >
        Respond by: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Nov 8, 2019 - 2:46AM
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="reason"
  >
    <Loadable>
      <span
        className="wcpay-dispute-info-key"
      >
        Reason: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Fraudulent
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="order"
  >
    <Loadable>
      <span
        className="wcpay-dispute-info-key"
      >
        Order: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        <OrderLink
          order={
            Object {
              "number": "1",
              "url": "http://test.local/order/1",
            }
          }
        />
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="customer"
  >
    <Loadable>
      <span
        className="wcpay-dispute-info-key"
      >
        Customer: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Mock Customer
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="transactionId"
  >
    <Loadable>
      <span
        className="wcpay-dispute-info-key"
      >
        Transaction ID: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        <Link
          href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_mock"
          type="wc-admin"
        >
          ch_mock
        </Link>
      </span>
    </Loadable>
  </div>
</div>
`;

exports[`Dispute info renders loading state 1`] = `
<div
  className="wcpay-dispute-info"
>
  <div
    className="wcpay-dispute-info-item"
    key="created"
  >
    <Loadable
      isLoading={true}
    >
      <span
        className="wcpay-dispute-info-key"
      >
        Dispute date: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Created placeholder
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="amount"
  >
    <Loadable
      isLoading={true}
    >
      <span
        className="wcpay-dispute-info-key"
      >
        Disputed amount: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Amount placeholder
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="dueBy"
  >
    <Loadable
      isLoading={true}
    >
      <span
        className="wcpay-dispute-info-key"
      >
        Respond by: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Due by placeholder
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="reason"
  >
    <Loadable
      isLoading={true}
    >
      <span
        className="wcpay-dispute-info-key"
      >
        Reason: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Reason placeholder
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="order"
  >
    <Loadable
      isLoading={true}
    >
      <span
        className="wcpay-dispute-info-key"
      >
        Order: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Order link placeholder
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="customer"
  >
    <Loadable
      isLoading={true}
    >
      <span
        className="wcpay-dispute-info-key"
      >
        Customer: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Customer placeholder
      </span>
    </Loadable>
  </div>
  <div
    className="wcpay-dispute-info-item"
    key="transactionId"
  >
    <Loadable
      isLoading={true}
    >
      <span
        className="wcpay-dispute-info-key"
      >
        Transaction ID: 
      </span>
      <span
        className="wcpay-dispute-info-value"
      >
        Transaction placeholder
      </span>
    </Loadable>
  </div>
</div>
`;
